force-app/main/default/objects/eWallet_Trustee__c/eWallet_Trustee__c.object-meta.xml
<CustomObject>
    <description>Sub E-wallet for Trustee</description>
    <label>eWallet Trustee</label>
    <nameField>
        <displayFormat>EWT-{0000}</displayFormat>
        <label>eWallet Trustee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eWallets Trustee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>