force-app/main/default/objects/eWallet_Trustee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>eWallets Trustee</relationshipLabel>
    <relationshipName>eWallets_Trustee</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>