force-app/main/default/objects/eWallet_Trustee__c/fields/Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance__c</fullName>
    <formula>Balance__c - Reservations__c -  Withdrawals_Not_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>