force-app/main/default/objects/eWallet_Trustee__c/fields/Deposits_Not_Processed__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Not_Processed__c</fullName>
    <label>Deposits Not Processed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>