force-app/main/default/objects/eWallet_Trustee__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <inlineHelpText>Sum of Allocation for Founded invoices</inlineHelpText>
    <label>In Progress</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>