force-app/main/default/objects/eWallet_Trustee__c/fields/In_Progress_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_USD_Equiv__c</fullName>
    <formula>In_Progress__c * Marketplace_for_FX__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>