force-app/main/default/objects/eWallet_Trustee__c/fields/Main_eWallet__c.field-meta.xml
<CustomField>
    <fullName>Main_eWallet__c</fullName>
    <inlineHelpText>Main e-wallet</inlineHelpText>
    <label>Main eWallet</label>
    <referenceTo>eWallet__c</referenceTo>
    <relationshipLabel>eWallets Trustee</relationshipLabel>
    <relationshipName>eWallets_Trustee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>