force-app/main/default/objects/eWallet_Trustee__c/fields/Marketplace_for_FX__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_for_FX__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Market place to get the USD FX equivalent</inlineHelpText>
    <label>Marketplace for FX</label>
    <referenceTo>Marketplace__c</referenceTo>
    <relationshipLabel>eWallets Trustee</relationshipLabel>
    <relationshipName>eWallets_Trustee</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>