force-app/main/default/objects/eWallet_Trustee__c/fields/Pre_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Pre_Reservations__c</fullName>
    <label>Pre-reservations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>