force-app/main/default/objects/eWallet_Trustee__c/fields/Pre_Reservations_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Pre_Reservations_USD_Equiv__c</fullName>
    <formula>Pre_Reservations__c * Marketplace_for_FX__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-reservations USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>