force-app/main/default/objects/eWallet_Trustee__c/fields/Reservations__c.field-meta.xml
<CustomField>
    <fullName>Reservations__c</fullName>
    <inlineHelpText>Amount of Allocation not confirmed</inlineHelpText>
    <label>Reservations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>