force-app/main/default/objects/eWallet_Trustee__c/fields/Sensitive_Record__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive Record</label>
    <type>Checkbox</type>
</CustomField>