force-app/main/default/objects/eWallet_Trustee__c/fields/Total_Discount_Earned_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Earned_USD_Equiv__c</fullName>
    <formula>Total_Discount_Earned__c * USD_Equiv_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Earned USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>