force-app/main/default/objects/eWallet_Trustee__c/fields/Trustee__c.field-meta.xml
<CustomField>
    <fullName>Trustee__c</fullName>
    <inlineHelpText>To choose the owner of the trustee</inlineHelpText>
    <label>Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicorp Escrow</fullName>
            </value>
            <value>
                <fullName>Amicorp Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>