force-app/main/default/objects/eWallet_Trustee__c/fields/Withdrawals_Not_Processed__c.field-meta.xml
<CustomField>
    <fullName>Withdrawals_Not_Processed__c</fullName>
    <label>Withdrawals_Not_Processed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>