force-app/main/default/objects/eWallet_Trustee__c/validationRules/Account_of_Main_eWallet_need_to_match.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_of_Main_eWallet_need_to_match</fullName>
    <active>true</active>
    <description>Account need to match that of Main eWallet</description>
    <errorConditionFormula>Account__c != null &amp;&amp; Account__c != Main_eWallet__r.Account__c</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Not same with Account of Main eWallet</errorMessage>
</ValidationRule>