force-app/main/default/objects/eWallet_Trustee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CCY__c</columns>
    <columns>Trustee__c</columns>
    <columns>e_wallet_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>